Added randomnly generated events

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -37,7 +37,17 @@
                 <a href="discover.html" id="current">Discover</a>
             </nav>
         </header>
-        <main></main>
+        <main>
+            <div class="grid">
+                <div class="sidbar">
+                    <p id="lastVisit"></p>
+                    <section id="commerceEvents">
+                        <h2>Events</h2>
+                    </section>
+                </div>
+                <div class="images"></div>
+            </div>
+        </main>
         <footer>
             <div>
                 <p>Deer Vally AZ Chamber of Commerce</p>
