added a grid area

--- a/project/index.html
+++ b/project/index.html
@@ -30,7 +30,9 @@
                 <a href="archetypes.html">Archetypes</a>
             </nav>
         </header>
-        <main></main>
+        <main>
+            <div class="grid"></div>
+        </main>
         <footer>
             <p>&copy; Hyrum Wines | WDD 231</p>
         </footer>
