finished the last bits needed

--- a/project/deckAdded.html
+++ b/project/deckAdded.html
@@ -32,6 +32,7 @@
         </header>
         <main>
             <p>Thank you your deck has been added</p>
+            <div class="flex"></div>
         </main>
         <footer>
             <p>&copy; Hyrum Wines | WDD 231</p>
