--- a/project/index.html
+++ b/project/index.html
@@ -31,6 +31,7 @@
             </nav>
         </header>
         <main>
+            <button id="lastViewed">Last Viewed Deck</button>
             <div class="grid"></div>
         </main>
         <footer>
