--- a/project/deckList.html
+++ b/project/deckList.html
@@ -31,6 +31,7 @@
             </nav>
         </header>
         <main>
+            <div class="flex"></div>
         </main>
         <footer>
             <p>&copy; Hyrum Wines | WDD 231</p>
