--- a/project/deckList.html
+++ b/project/deckList.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Magic Deck Builder | Home</title>
+        <title>Magic Deck Builder | Deck List</title>
         <meta name="description" content="Site plan for a site to make a deck and explain how to play the deck">
         <meta name="author" content="Hyrum Wines | WDD 231">
         <meta property="og:title" content="Magic Deck Learner">
